Fix Overlap of elements in Horizontal Arrangement.

--- a/appinventor/appengine/war/Ya.css
+++ b/appinventor/appengine/war/Ya.css
@@ -472,6 +472,11 @@ select {
   background: white;
 }
 
+.gwt-TextBox {
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
 .gwt-Tree .gwt-TreeItem span * {
   margin: 0 2px;
 }
